# bitmark-sdk-java

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  build.gradle  configuration.gradle  dependencies.gradle  publication.gradle  publication_android.gradle  publication_java.gradle  settings.gradle
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  (+1 more)
.travis/: deploy.sh
android-ktx/: CHANGELOG.md  README.md  build.gradle
android-sdk/: CHANGELOG.md  README.md  build.gradle
api-service/: CHANGELOG.md  build.gradle
bc-bip39-wrapper/: .gitignore  CMakeLists.txt  README.md  build.gradle
bc-bip39-wrapper/jni/: .gitignore  bip39.i  compile.sh  installswig.sh  jnilib.sh
bc-bip39-wrapper/scripts/: build-bc-bip39-host.sh  build-linux.sh  build-mac.sh  dependencies-linux.sh  dependencies-mac.sh  dependencies.sh  setenv.sh  submodule-update.sh  update-android.sh
bc-bip39-wrapper/src/androidTest/java/com/bitmark/sdk/bcbip39wrapper/: AndroidBip39Test.java
bc-bip39-wrapper/src/main/: AndroidManifest.xml
bc-bip39-wrapper/src/main/java/com/bitmark/sdk/bcbip39wrapper/bip39/: LibraryLoader.java
bc-bip39-wrapper/src/main/java/com/bitmark/sdk/bcbip39wrapper/error/: LibraryLoaderException.java
bc-bip39-wrapper/src/main/res/values/: strings.xml
bc-bip39-wrapper/src/test/java/com/bitmark/sdk/bcbip39wrapper/: Bip39Test.java
configuration/: build.gradle
cryptography/: .gitignore  CHANGELOG.md  build-linux.sh  build-mac.sh  build.gradle  setenv.sh
java-sdk/: .gitignore  CHANGELOG.md  README.md  build.gradle
sdk/: build.gradle
(+936 files in other folders)
